---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        leading_comments: [],
        items: [
            Comment(
                " test",
            ),
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "k",
                                value: AliasedYaml {
                                    alias: Some(
                                        "anch",
                                    ),
                                    value: UnquotedString(
                                        "test",
                                    ),
                                },
                            },
                        ),
                        Comment(
                            " hi",
                        ),
                        Element(
                            HashElement {
                                key: "v",
                                value: AliasedYaml {
                                    alias: Some(
                                        "ok",
                                    ),
                                    value: Array(
                                        [
                                            Element(
                                                AliasedYaml {
                                                    alias: Some(
                                                        "ok2",
                                                    ),
                                                    value: UnquotedString(
                                                        "test",
                                                    ),
                                                },
                                            ),
                                            Comment(
                                                " comment",
                                            ),
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: Anchor(
                                                        "test",
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "v",
                                value: AliasedYaml {
                                    alias: None,
                                    value: UnquotedString(
                                        "test",
                                    ),
                                },
                            },
                        ),
                        InlineComment(
                            " maybe",
                        ),
                        Element(
                            HashElement {
                                key: "k",
                                value: AliasedYaml {
                                    alias: None,
                                    value: Array(
                                        [
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: UnquotedString(
                                                        "5",
                                                    ),
                                                },
                                            ),
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: UnquotedString(
                                                        "10",
                                                    ),
                                                },
                                            ),
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: DoubleQuotedString(
                                                        [
                                                            String(
                                                                "e",
                                                            ),
                                                        ],
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "double_quoted",
                                value: AliasedYaml {
                                    alias: None,
                                    value: DoubleQuotedString(
                                        [
                                            String(
                                                "test",
                                            ),
                                            BlankLines(
                                                1,
                                            ),
                                            String(
                                                "now a space ",
                                            ),
                                            EscapedChar(
                                                Newline,
                                            ),
                                            String(
                                                " vs ",
                                            ),
                                            EscapedChar(
                                                Backslash,
                                            ),
                                            String(
                                                "n",
                                            ),
                                            RemovableNewline,
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "single_quoted",
                                value: AliasedYaml {
                                    alias: None,
                                    value: SingleQuotedString(
                                        [
                                            String(
                                                "test escaping ",
                                            ),
                                            EscapedChar(
                                                SingleQuote,
                                            ),
                                            BlankLines(
                                                1,
                                            ),
                                            String(
                                                "now a space \\n vs \\\\n",
                                            ),
                                            RemovableNewline,
                                        ],
                                    ),
                                },
                            },
                        ),
                        Element(
                            HashElement {
                                key: "l",
                                value: AliasedYaml {
                                    alias: None,
                                    value: Array(
                                        [
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: SingleQuotedString(
                                                        [
                                                            String(
                                                                "sqrt( {d}^({r*n+m}m+{p}) * x^({r*a+p})  * y^{b*r+q} )",
                                                            ),
                                                        ],
                                                    ),
                                                },
                                            ),
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: UnquotedString(
                                                        "Read the values of the cyclometric numbers off of the circle. <br/> {gon_circle}",
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
            Comment(
                " after",
            ),
        ],
    },
)
